# promptrunner_py

./: README.md  TODO.md  plan.md  pyproject.toml  requirements.txt  run.py  run_basic_test.sh  run_override_test.sh
promptrunner/: cli.py  runner.py
promptrunner/loaders/: yaml_model_configuration.py
promptrunner/models/: __init__.py  message.py  model_type.py  openai_parameters.py  output_type.py  prompt.py  result.py  result_type.py  role.py
prompts/: models.yaml  prompts.yaml
src/promptrunner/: interfaces.py  runner.py
src/promptrunner/drivers/: interfaces.py  openai_driver.py
src/promptrunner/loaders/: yaml_prompt_loader.py
src/promptrunner/models/: model_definition.py  openai_parameters.py
tests/: test_design.py  test_models.yaml  test_overrides.py  test_prompts.yaml
